# rawTunnel-client

./: readme.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cppdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.cpp  common.h  encrypt.cpp  log.h  native-lib.cpp
app/src/main/cpp/lib/: CMakeLists.txt  aes.h  md5.c  md5.h
app/src/main/cpp/lib/aes_acc/: CMakeLists.txt
app/src/main/cpp/lib/aes_acc/asm/: CMakeLists.txt
app/src/main/java/com/example/cppdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  chooseserver.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/cppdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
